# src/controllers/disturbanceEventController.ts
@@ -6,8 +6,8 @@ export const getDisturbanceEvents: RequestHandler = (req, res, next) => {
     try{
         const sortBy = req.query.sortBy as keyof DisturbanceEvent;
         const order = req.query.order as 'asc' | 'desc';
-        const offset = req.query.offset ? parseInt(req.query.offset as string, 10) : undefined;
-        const limit = req.query.limit ? parseInt(req.query.limit as string, 10) : undefined;
+        const offset = req.query.offset ? parseInt(req.query.offset as string, 10) : 1;
+        const limit = req.query.limit ? parseInt(req.query.limit as string, 10) : 10;
 
         const events = disturbanceEventModel.getAllEvents(sortBy, order, offset, limit);
         res.status(200).json(events);
@@ -20,7 +20,16 @@ export const getDisturbanceEventsByMonth: RequestHandler = (req, res, next) => {
     const month = req.params.month;
     
     if(month) { // check that req.params.month is defined
-        res.status(200).send( disturbanceEventModel.getEventsByMonth(month) )
+        try{
+            const sortBy = req.query.sortBy as keyof DisturbanceEvent;
+            const order = req.query.order as 'asc' | 'desc';
+            const offset = req.query.offset ? parseInt(req.query.offset as string, 10) : 1;
+            const limit = req.query.limit ? parseInt(req.query.limit as string, 10) : 10;
+    
+            res.status(200).send( disturbanceEventModel.getEventsByMonth(month, sortBy, order, offset, limit) )
+        }catch (error){
+            next(error);
+        }
     } else {
         //  Handle the case where 'month' is undefined
         res.status(400).send({ message: "Month parameter is required" }); //  Send a 400 Bad Request
@@ -31,7 +40,16 @@ export const getDisturbanceEventsByRegion: RequestHandler = (req, res, next) => 
     const nerc_region = req.params.region;
     
     if(nerc_region) { // check that req.params.month is defined
-        res.status(200).send( disturbanceEventModel.getEventsByRegion(nerc_region) )
+        try{
+            const sortBy = req.query.sortBy as keyof DisturbanceEvent;
+            const order = req.query.order as 'asc' | 'desc';
+            const offset = req.query.offset ? parseInt(req.query.offset as string, 10) : 1;
+            const limit = req.query.limit ? parseInt(req.query.limit as string, 10) : 10;
+    
+            res.status(200).send( disturbanceEventModel.getEventsByRegion(nerc_region, sortBy, order, offset, limit) )
+        }catch (error){
+            next(error);
+        }
     } else {
         //  Handle the case where 'nerc_region' is undefined
         res.status(400).send({ message: "Region parameter is required" }); //  Send a 400 Bad Request
@@ -42,7 +60,16 @@ export const getDisturbanceEventsByEventType: RequestHandler = (req, res, next) 
     const event_type = req.params.event_type;
     
     if(event_type) { // check that req.params.month is defined
-        res.status(200).send( disturbanceEventModel.getEventsByEventType(event_type))
+        try{
+            const sortBy = req.query.sortBy as keyof DisturbanceEvent;
+            const order = req.query.order as 'asc' | 'desc';
+            const offset = req.query.offset ? parseInt(req.query.offset as string, 10) : 1;
+            const limit = req.query.limit ? parseInt(req.query.limit as string, 10) : 10;
+    
+            res.status(200).send( disturbanceEventModel.getEventsByEventType(event_type, sortBy, order, offset, limit) )
+        }catch (error){
+            next(error);
+        }
     } else {
         //  Handle the case where 'event_type' is undefined
         res.status(400).send({ message: "Event Type parameter is required" }); //  Send a 400 Bad Request
