# src/schemas/openapi.json
@@ -27,6 +27,90 @@
           "disturbance-events"
         ],
         "summary": "Get disturbance events.",
+        "parameters": [
+          {
+            "name": "month",
+            "in": "path",
+            "description": "Status values that need to be considered for filter",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+              ]
+            }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "required": false,
+            "description": "Field used to sort returned data.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "month",
+                "date_event_began",
+                "time_event_began",
+                "date_of_restoration",
+                "time_of_restoration",
+                "area_affected",
+                "nerc_region",
+                "alert_criteria",
+                "event_type",
+                "demand_loss_in_mw",
+                "customers_affected"
+              ]
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "required": false,
+            "description": "asc or desc order.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "description": "First record of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 0
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "description": "Number of records of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 10
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -73,6 +157,62 @@
                 "November",
                 "December"
               ]
+            }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "required": false,
+            "description": "Field used to sort returned data.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "date_event_began",
+                "time_event_began",
+                "date_of_restoration",
+                "time_of_restoration",
+                "area_affected",
+                "nerc_region",
+                "alert_criteria",
+                "event_type",
+                "demand_loss_in_mw",
+                "customers_affected"
+              ]
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "required": false,
+            "description": "asc or desc order.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "description": "First record of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 0
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "description": "Number of records of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 10
             }
           }
         ],
@@ -138,6 +278,62 @@
                 "TRE",
                 "WECC"
               ]
+            }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "required": false,
+            "description": "Field used to sort returned data.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "month",
+                "date_event_began",
+                "time_event_began",
+                "date_of_restoration",
+                "time_of_restoration",
+                "area_affected",
+                "alert_criteria",
+                "event_type",
+                "demand_loss_in_mw",
+                "customers_affected"
+              ]
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "required": false,
+            "description": "asc or desc order.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "description": "First record of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 0
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "description": "Number of records of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 10
             }
           }
         ],
@@ -212,6 +408,62 @@
                 "Weather"
               ]
             }
+          },
+          {
+            "name": "sortBy",
+            "in": "query",
+            "required": false,
+            "description": "Field used to sort returned data.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "month",
+                "date_event_began",
+                "time_event_began",
+                "date_of_restoration",
+                "time_of_restoration",
+                "area_affected",
+                "nerc_region",
+                "alert_criteria",
+                "demand_loss_in_mw",
+                "customers_affected"
+              ]
+            }
+          },
+          {
+            "name": "order",
+            "in": "query",
+            "required": false,
+            "description": "asc or desc order.",
+            "schema": {
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "description": "First record of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 0
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "description": "Number of records of data to return.",
+            "schema": {
+              "type": "number",
+              "default": 10
+            }
           }
         ],
         "responses": {
@@ -262,7 +514,21 @@
             "required": false,
             "description": "Field used to sort returned data.",
             "schema": {
-              "type": "string"
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "month",
+                "date_event_began",
+                "time_event_began",
+                "date_of_restoration",
+                "time_of_restoration",
+                "area_affected",
+                "nerc_resion",
+                "alert_criteria",
+                "event_type",
+                "demand_loss_in_mw",
+                "customers_affected"
+              ]
             }
           },
           {
@@ -271,16 +537,22 @@
             "required": false,
             "description": "asc or desc order.",
             "schema": {
-              "type": "string"
+              "type": "string",
+              "default": "none",
+              "enum": [
+                "asc",
+                "desc"
+              ]
             }
           },
           {
             "name": "offset",
             "in": "query",
             "required": false,
-            "description": "First record of data to return",
+            "description": "First record of data to return.",
             "schema": {
-              "type": "number"
+              "type": "number",
+              "default": 0
             }
           },
           {
@@ -289,7 +561,8 @@
             "required": false,
             "description": "Number of records of data to return.",
             "schema": {
-              "type": "number"
+              "type": "number",
+              "default": 10
             }
           },
           {
